demo One Mzm Pages
demo One Mzm Pages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
     
 </nav>
 <section class="mzmHK">
-    
+  <div class="infoBox">
+        <h1>梅鄉汗路<br>文化生態館</h1>
+        <div class="subList">
+        <div class="subListLeft"></div>
+            <div class="subListRight"></div>
+        </div>
+    </div>   
 </section>
 </body>
 </html>
