--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
 <section id="frontIndex">
+  <div class="eachContainer">
    <div id="navMap">
-    <div id="frontLogo"></div>
+       <div id="frontLogo"></div></div>
     </div>
     <main><div id="selectMenu">
         
@@ -43,105 +44,109 @@
     
 </nav>
 <section class="mzmHK eachMzm">
+ <div class="eachContainer">
   <div class="infoBox">
         <h1>新港文化館<br>25號倉庫</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
         </div>
-    </div>   
+    </div> 
+</div>  
 </section>
-<section class="mzmHL eachMzm">
+<section class="mzmHL eachMzm"> 
+  <div class="eachContainer">
   <div class="infoBox">
         <h1>新港香藝<br>文化園區</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
         </div>
-    </div>   
+      </div></div>   
 </section>
-<section class="mzmML eachMzm">
+<section class="mzmML eachMzm"> <div class="eachContainer">
+ 
   <div class="infoBox">
         <h1>嘉義縣梅嶺<br>美術館</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
         </div>
-    </div>   
+    </div></div>   
 </section>
-<section class="mzmPAC eachMzm">
+<section class="mzmPAC eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>嘉義縣<br>表演藝術中心</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
         </div>
-    </div>   
+    </div> </div>  
 </section>
-<section class="mzmAL eachMzm">
+<section class="mzmAL eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>阿里山賓館<br>歷史館</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
         </div>
-    </div>   
+    </div></div>   
 </section>
-<section class="mzmMS eachMzm">
+<section class="mzmMS eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>梅鄉汗路<br>藝文生態館</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
         </div>
-    </div>   
+    </div> </div>  
 </section>
-<section class="mzmZN eachMzm">
+<section class="mzmZN eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>洲南鹽場<br>新厝仔生活圈</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
         </div>
-    </div>   
+    </div>   </div>
 </section>
-<section class="mzmLC eachMzm">
+<section class="mzmLC eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>鹿仔草民俗<br>文化學堂</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
         </div>
-    </div>   
+    </div> </div>  
 </section>
-<section class="mzmSK eachMzm">
+<section class="mzmSK eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>溪口文化<br>生活館</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
         </div>
-    </div>   
+    </div></div>   
 </section>
-<section class="mzmZP eachMzm">
+<section class="mzmZP eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>中埔嘉檳<br>文化館</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
         </div>
-    </div>   
+    </div> </div>  
 </section>
-<section class="mzmPZ eachMzm">
+<section class="mzmPZ eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>朴子刺繡<br>文化館</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
         </div>
-    </div>   
+    </div> </div>  
 </section>
-<footer>指導單位：<a id="moc"></a><a id="cyc"></a> 主辦單位： <a id="tbocc"></a>執行單位：<a id="tnnua"></a>  </footer>
+<footer>指導單位／<a id="moc"></a><a id="cyc"></a> 主辦單位／ <a id="tbocc"></a>執行單位／<a id="tnnua"></a>  </footer>
 
 </body>
 </html>
