--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
 </div></main>
 </section>
-<nav>
+<nav class="navBar">
     
 </nav>
-<section class="mzmHK eachMzm">
+<section id="firstSec" class="mzmHK eachMzm">
  <div class="eachContainer">
   <div class="infoBox">
         <h1>新港文化館<br>25號倉庫</h1>
