--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@
 </div></main>
 </section>
 <nav class="navBar">
-    
+    <a class="navLogo" href="#frontIndex"></a>
+    <div class="navSub"></div>
+    <input type="checkbox" id="toggle-1"  class="navToogle">
+    <label for="toggle-1" class="navCenter"> </label>
+     
+    <div class="listBox"><a href="#mzmHK">新港<br>文化館</a><a href="#mzmHL">新港香藝<br>文化園區</a><a href="#mzmML">梅嶺<br>美術館</a><a href="#mzmPAC">表演<br>藝術中心</a><a href="#mzmAL">阿里山賓館<br>歷史館</a><a href="#mzmMS">梅山汗路<br>藝文生態館</a><a href="#mzmZN">洲南<br>鹽場</a><a href="#mzmLC">鹿仔草民俗<br>文化學堂</a><a href="#mzmSK">溪口文化<br>生活館</a><a href="#mzmZP">中埔嘉檳<br>文化館</a><a href="#mzmPZ">朴子刺繡<br>文化館</a><a href="#mzmTP">山茶花<br>書館</a>
+        </div>
 </nav>
-<section id="firstSec" class="mzmHK eachMzm">
+<section id="mzmHK" class="eachMzm firstSec">
  <div class="eachContainer">
   <div class="infoBox">
         <h1>新港文化館<br>25號倉庫</h1>
@@ -57,7 +63,7 @@
     </div> 
 </div>  
 </section>
-<section class="mzmHL eachMzm"> 
+<section id="mzmHL" class="eachMzm"> 
   <div class="eachContainer">
   <div class="infoBox">
         <h1>新港香藝<br>文化園區</h1>
@@ -67,7 +73,7 @@
         </div>
       </div></div>   
 </section>
-<section class="mzmML eachMzm"> <div class="eachContainer">
+<section id="mzmML" class="eachMzm"> <div class="eachContainer">
  
   <div class="infoBox">
         <h1>嘉義縣梅嶺<br>美術館</h1>
@@ -77,7 +83,7 @@
         </div>
     </div></div>   
 </section>
-<section class="mzmPAC eachMzm"> <div class="eachContainer">
+<section id="mzmPAC"class="eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>嘉義縣<br>表演藝術中心</h1>
         <div class="subList">
@@ -86,7 +92,7 @@
         </div>
     </div> </div>  
 </section>
-<section class="mzmAL eachMzm"> <div class="eachContainer">
+<section id="mzmAL" class="eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>阿里山賓館<br>歷史館</h1>
         <div class="subList">
@@ -95,16 +101,16 @@
         </div>
     </div></div>   
 </section>
-<section class="mzmMS eachMzm"> <div class="eachContainer">
+<section id="mzmMS" class="eachMzm"> <div class="eachContainer">
   <div class="infoBox">
-        <h1>梅鄉汗路<br>藝文生態館</h1>
+        <h1>梅山汗路<br>藝文生態館</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
         </div>
     </div> </div>  
 </section>
-<section class="mzmZN eachMzm"> <div class="eachContainer">
+<section id="mzmZN" class="eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>洲南鹽場<br>新厝仔生活圈</h1>
         <div class="subList">
@@ -113,7 +119,7 @@
         </div>
     </div>   </div>
 </section>
-<section class="mzmLC eachMzm"> <div class="eachContainer">
+<section id="mzmLC" class="eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>鹿仔草民俗<br>文化學堂</h1>
         <div class="subList">
@@ -122,7 +128,7 @@
         </div>
     </div> </div>  
 </section>
-<section class="mzmSK eachMzm"> <div class="eachContainer">
+<section id="mzmSK" class="eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>溪口文化<br>生活館</h1>
         <div class="subList">
@@ -131,7 +137,7 @@
         </div>
     </div></div>   
 </section>
-<section class="mzmZP eachMzm"> <div class="eachContainer">
+<section id="mzmZP" class="eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>中埔嘉檳<br>文化館</h1>
         <div class="subList">
@@ -140,9 +146,18 @@
         </div>
     </div> </div>  
 </section>
-<section class="mzmPZ eachMzm"> <div class="eachContainer">
+<section id="mzmPZ" class=" eachMzm"> <div class="eachContainer">
   <div class="infoBox">
         <h1>朴子刺繡<br>文化館</h1>
+        <div class="subList">
+        <div class="subListLeft"></div>
+            <div class="subListRight"></div>
+        </div>
+    </div> </div>  
+</section>
+<section id="mzmTP" class=" eachMzm"> <div class="eachContainer">
+  <div class="infoBox">
+        <h1>山茶花<br>書館</h1>
         <div class="subList">
         <div class="subListLeft"></div>
             <div class="subListRight"></div>
