--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <input type="checkbox" id="toggle-1"  class="navToogle">
     <label for="toggle-1" class="navCenter"> </label>
      
-    <div class="listBox"><a href="#mzmHK">新港<br>文化館</a><a href="#mzmHL">新港香藝<br>文化園區</a><a href="#mzmML">梅嶺<br>美術館</a><a href="#mzmPAC">表演<br>藝術中心</a><a href="#mzmAL">阿里山賓館<br>歷史館</a><a href="#mzmMS">梅山汗路<br>藝文生態館</a><a href="#mzmZN">洲南<br>鹽場</a><a href="#mzmLC">鹿仔草民俗<br>文化學堂</a><a href="#mzmSK">溪口文化<br>生活館</a><a href="#mzmZP">中埔嘉檳<br>文化館</a><a href="#mzmPZ">朴子刺繡<br>文化館</a><a href="#mzmTP">山茶花<br>書館</a><a href="#mzmBC">國家廣播<br>文物館</a>
+    <div class="listBox"><a href="#mzmHK">新港<br>文化館</a><a href="#mzmHL">新港香藝<br>文化園區</a><a href="#mzmML">梅嶺<br>美術館</a><a href="#mzmPAC">表演<br>藝術中心</a><a href="#mzmAL">阿里山賓館<br>歷史館</a><a href="#mzmMS">梅山汗路<br>藝文生態館</a><a href="#mzmZN">洲南<br>鹽場</a><a href="#mzmLC">鹿仔草民俗<br>文化學堂</a><a href="#mzmSK">溪口文化<br>生活館</a><a href="#mzmZP">中埔嘉檳<br>文化館</a><a href="#mzmPZ">朴子刺繡<br>文化館</a><a href="#mzmTP">山茶花<br>書館</a><a href="#mzmBC">國家廣播<br>文物館</a><a id="adjNav"></a>
         </div>
 </nav>
 <section id="mzmHK" class="eachMzm firstSec">
@@ -247,7 +247,7 @@
         </div>
     </div> </div>  
 </section>
-<footer><h5>指導單位／</h5><a id="moc"></a><a id="cyc"></a><h5> 主辦單位／</h5><a id="tbocc"></a><h5>執行單位／</h5><a id="tnnua"></a>  </footer>
+<footer><h5>指導單位／</h5><a id="moc"></a><a id="cyc"></a><br /><h5> 主辦單位／</h5><a id="tbocc"></a><br /><h5>執行單位／</h5><a id="tnnua"></a>  </footer>
 
 </body>
 </html>
