--- a/index.html
+++ b/index.html
@@ -1,105 +1,110 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="./js/main.js?021212"></script>
-        <title>吟遊諸羅 Reading ChiaYi - 嘉義縣博物館與地方文化館</title>
 
-        <link rel="stylesheet" href="./css/reset.css">
-        <link rel="stylesheet" href="./css/main.css">
-        <link rel="stylesheet" href="./css/rwd.css">
-    </head>
-    <body>
-        <section id="frontIndex">
-            <div class="eachContainer">
-                <div id="navMap">
-                    <div id="frontLogo">
-                    </div>
-                    <div id="navMapBk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./js/main.js?021212"></script>
+    <title>吟遊諸羅 Reading ChiaYi - 嘉義縣博物館與地方文化館</title>
 
-                    </div>
-                    <a class="eachButton mzmHK">
-                        <div class="btn"></div>
-                        <h4>新港文化館</h4><br>
-                        <h4>25號倉庫</h4>
-                    </a>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/rwd.css">
+</head>
 
-                    <a class="eachButton mzmHL">
-                        <div class="btn"></div>
-                        <h4>新港香藝</h4><br>
-                        <h4>文化園區</h4>
-                    </a>
-                    <a class="eachButton mzmBC">
-                        <div class="btn"></div>
-                        <h4>國家廣播</h4><br>
-                        <h4>文物館</h4>
-                    </a>
-
-                    <a class="eachButton mzmPAC">
-                        <div class="btn"></div>
-                        <h4>表演藝術</h4><br>
-                        <h4>中心</h4>
-                    </a>
-
-                    <a class="eachButton mzmAL">
-                        <div class="btn"></div>
-                        <h4>阿里山賓館</h4><br>
-                        <h4>歷史館</h4>
-                    </a>
-
-                    <a class="eachButton mzmMS">
-                        <div class="btn"></div>
-                        <h4>梅山汗路</h4><br>
-                        <h4>藝文生態館</h4>
-                    </a>
-
-                    <a class="eachButton mzmZN">
-                        <div class="btn"></div>
-                        <h4>洲南</h4><br>
-                        <h4>鹽場</h4>
-                    </a>
-
-                    <a class="eachButton mzmLC">
-                        <div class="btn"></div>
-                        <h4>鹿仔草民俗</h4><br>
-                        <h4>文化學堂</h4>
-                    </a>
-
-                    <a class="eachButton mzmSK">
-                        <div class="btn"></div>
-                        <h4>溪口文化</h4><br>
-                        <h4>生活館</h4>
-                    </a>
-
-                    <a class="eachButton mzmZP">
-                        <div class="btn"></div>
-                        <h4>中埔嘉檳</h4><br>
-                        <h4>文化館</h4>
-                    </a>
-
-                    <a class="eachButton mzmPZ">
-                        <div class="btn"></div>
-                        <h4>朴子刺繡</h4><br>
-                        <h4>文化館</h4>
-                    </a>
-
-                    <a class="eachButton mzmML">
-                        <div class="btn"></div>
-                        <h4>梅嶺</h4>
-                        <br><h4>美術館</h4>
-                    </a>
-
-                    <a class="eachButton mzmTP">
-                        <div class="btn"></div>
-                        <h4>山茶花</h4>
-                        <br><h4>書院</h4>
-                    </a>
+<body>
+    <section id="frontIndex">
+        <div class="eachContainer">
+            <div id="navMap">
+                <div id="frontLogo">
+                </div>
+                <div id="navMapBk">
 
                 </div>
+                <a class="eachButton mzmHK">
+                    <div class="btn"></div>
+                    <h4>新港文化館</h4><br>
+                    <h4>25號倉庫</h4>
+                </a>
+
+                <a class="eachButton mzmHL">
+                    <div class="btn"></div>
+                    <h4>新港香藝</h4><br>
+                    <h4>文化園區</h4>
+                </a>
+                <a class="eachButton mzmBC">
+                    <div class="btn"></div>
+                    <h4>國家廣播</h4><br>
+                    <h4>文物館</h4>
+                </a>
+
+                <a class="eachButton mzmPAC">
+                    <div class="btn"></div>
+                    <h4>表演藝術</h4><br>
+                    <h4>中心</h4>
+                </a>
+
+                <a class="eachButton mzmAL">
+                    <div class="btn"></div>
+                    <h4>阿里山賓館</h4><br>
+                    <h4>歷史館</h4>
+                </a>
+
+                <a class="eachButton mzmMS">
+                    <div class="btn"></div>
+                    <h4>梅山汗路</h4><br>
+                    <h4>藝文生態館</h4>
+                </a>
+
+                <a class="eachButton mzmZN">
+                    <div class="btn"></div>
+                    <h4>洲南</h4><br>
+                    <h4>鹽場</h4>
+                </a>
+
+                <a class="eachButton mzmLC">
+                    <div class="btn"></div>
+                    <h4>鹿仔草民俗</h4><br>
+                    <h4>文化學堂</h4>
+                </a>
+
+                <a class="eachButton mzmSK">
+                    <div class="btn"></div>
+                    <h4>溪口文化</h4><br>
+                    <h4>生活館</h4>
+                </a>
+
+                <a class="eachButton mzmZP">
+                    <div class="btn"></div>
+                    <h4>中埔嘉檳</h4><br>
+                    <h4>文化館</h4>
+                </a>
+
+                <a class="eachButton mzmPZ">
+                    <div class="btn"></div>
+                    <h4>朴子刺繡</h4><br>
+                    <h4>文化館</h4>
+                </a>
+
+                <a class="eachButton mzmML">
+                    <div class="btn"></div>
+                    <h4>梅嶺</h4>
+                    <br>
+                    <h4>美術館</h4>
+                </a>
+
+                <a class="eachButton mzmTP">
+                    <div class="btn"></div>
+                    <h4>山茶花</h4>
+                    <br>
+                    <h4>書院</h4>
+                </a>
+
             </div>
-            <main><div id="selectMenu">
+        </div>
+        <main>
+            <div id="selectMenu">
 
                 <div id="select1" class="infoBox">
 
@@ -115,142 +120,47 @@
 
                 </div>
 
-                </div></main>
-        </section>
-        <nav class="navBar">
-            <a class="navLogo" href="#frontIndex"></a>
-            <div class="navSub"></div>
-            <input type="checkbox" id="toggle-1"  class="navToogle">
-            <label for="toggle-1" class="navCenter"> </label>
-
-            <div class="listBox">
-            <a id="adjNav"></a>
             </div>
-        </nav>
-        <section id="mzmHK" class="eachMzm firstSec">
-            <div class="eachContainer">
-                <div class="infoBox">
-                    <h1>新港文化館<br>25號倉庫</h1>
-                    <div class="subList">
-                        <div class="subListLeft"></div>
-                        <div class="subListRight"></div>
-                    </div>
-                </div> 
-            </div>  
-        </section>
-        <section id="mzmHL" class="eachMzm"> 
-            <div class="eachContainer">
-                <div class="infoBox">
-                    <h1><a href="#mzmHL">新港香藝<br>文化園區</a></h1>
-                    <div class="subList">
-                        <div class="subListLeft"></div>
-                        <div class="subListRight"></div>
-                    </div>
-                </div></div>   
-        </section>
-        <section id="mzmML" class="eachMzm"> <div class="eachContainer">
+        </main>
+    </section>
+    <nav class="navBar">
+        <a class="navLogo" href="#frontIndex"></a>
+        <div class="navSub"></div>
+        <input type="checkbox" id="toggle-1" class="navToogle">
+        <label for="toggle-1" class="navCenter"> </label>
 
+        <div class="listBox">
+            <a id="adjNav"></a>
+        </div>
+    </nav>
+    <section class="eachMzm firstSec">
+        <div class="eachContainer">
             <div class="infoBox">
-                <h1>嘉義縣梅嶺<br>美術館</h1>
+                <h1></h1>
                 <div class="subList">
                     <div class="subListLeft"></div>
                     <div class="subListRight"></div>
                 </div>
-            </div></div>   
-        </section>
-        <section id="mzmPAC"class="eachMzm"> <div class="eachContainer">
-            <div class="infoBox">
-                <h1>嘉義縣<br>表演藝術中心</h1>
-                <div class="subList">
-                    <div class="subListLeft"></div>
-                    <div class="subListRight"></div>
+                <div class="mainContent">
+                    <div class="contentHeader">
+                        <h1></h1>
+                        <div class="functionBox">
+                            <a class="" target="_blank">[新分頁開啟]</a>
+                            <a target="_blank">[新分頁開啟]</a>
+                        </div>
+                    </div>
+                    <div></div>
                 </div>
-            </div> </div>  
-        </section>
-        <section id="mzmAL" class="eachMzm"> <div class="eachContainer">
-            <div class="infoBox">
-                <h1>阿里山賓館<br>歷史館</h1>
-                <div class="subList">
-                    <div class="subListLeft"></div>
-                    <div class="subListRight"></div>
-                </div>
-            </div></div>   
-        </section>
-        <section id="mzmMS" class="eachMzm"> <div class="eachContainer">
-            <div class="infoBox">
-                <h1>梅山汗路<br>藝文生態館</h1>
-                <div class="subList">
-                    <div class="subListLeft"></div>
-                    <div class="subListRight"></div>
-                </div>
-            </div> </div>  
-        </section>
-        <section id="mzmZN" class="eachMzm"> <div class="eachContainer">
-            <div class="infoBox">
-                <h1>洲南鹽場<br>新厝仔生活圈</h1>
-                <div class="subList">
-                    <div class="subListLeft"></div>
-                    <div class="subListRight"></div>
-                </div>
-            </div>   </div>
-        </section>
-        <section id="mzmLC" class="eachMzm"> <div class="eachContainer">
-            <div class="infoBox">
-                <h1>鹿仔草民俗<br>文化學堂</h1>
-                <div class="subList">
-                    <div class="subListLeft"></div>
-                    <div class="subListRight"></div>
-                </div>
-            </div> </div>  
-        </section>
-        <section id="mzmSK" class="eachMzm"> <div class="eachContainer">
-            <div class="infoBox">
-                <h1>溪口文化<br>生活館</h1>
-                <div class="subList">
-                    <div class="subListLeft"></div>
-                    <div class="subListRight"></div>
-                </div>
-            </div></div>   
-        </section>
-        <section id="mzmZP" class="eachMzm"> <div class="eachContainer">
-            <div class="infoBox">
-                <h1>中埔嘉檳<br>文化館</h1>
-                <div class="subList">
-                    <div class="subListLeft"></div>
-                    <div class="subListRight"></div>
-                </div>
-            </div> </div>  
-        </section>
-        <section id="mzmPZ" class=" eachMzm"> <div class="eachContainer">
-            <div class="infoBox">
-                <h1>朴子刺繡<br>文化館</h1>
-                <div class="subList">
-                    <div class="subListLeft"></div>
-                    <div class="subListRight"></div>
-                </div>
-            </div> </div>  
-        </section>
-        <section id="mzmTP" class=" eachMzm"> <div class="eachContainer">
-            <div class="infoBox">
-                <h1>山茶花<br>書館</h1>
-                <div class="subList">
-                    <div class="subListLeft"></div>
-                    <div class="subListRight"></div>
-                </div>
-            </div> </div>  
-        </section>
-        <section id="mzmBC" class=" eachMzm"> <div class="eachContainer">
-            <div class="infoBox">
-                <h1>國家廣播<br>文物館</h1>
-                <div class="subList">
-                    <div class="subListLeft"></div>
-                    <div class="subListRight"></div>
-                </div>
-            </div> </div>  
-        </section>
-        <footer>
-            <h5>指導單位／</h5>
-            <a id="moc"></a><a id="cyc"></a><br /><h5> 主辦單位／</h5><a id="tbocc"></a><br /><h5>執行單位／</h5><a id="tnnua"></a>  </footer>
+            </div>
+        </div>
+    </section>
 
-    </body>
+    <footer>
+        <h5>指導單位／</h5>
+        <a id="moc"></a><a id="cyc"></a><br />
+        <h5> 主辦單位／</h5><a id="tbocc"></a><br />
+        <h5>執行單位／</h5><a id="tnnua"></a> </footer>
+
+</body>
+
 </html>
