--- a/index.html
+++ b/index.html
@@ -141,17 +141,26 @@
                     <div class="subListLeft"></div>
                     <div class="subListRight"></div>
                 </div>
-                <div class="mainContent">
-                    <div class="contentHeader">
-                        <h1></h1>
-                        <div class="functionBox">
-                            <a class="" target="_blank">[新分頁開啟]</a>
-                            <a target="_blank">[新分頁開啟]</a>
-                        </div>
+
+
+
+            </div>
+            <div class="mainContent">
+                <div class="contentHeader">
+                    <h2>香藝緣起</h2>
+                    <div class="functionBox">
+                        <a class="website" target="_blank"></a>
+                        <a target="_blank">[新分頁開啟]</a>
                     </div>
-                    <div></div>
+                </div>
+                <div class="contentDisplay">
+                    <iframe src="http://www.incense-art.com.tw/about.asp"></iframe>
+                </div>
+                <div>
+
                 </div>
             </div>
+            <!---end of Main COntent-->
         </div>
     </section>
 
