--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./js/main.js?0223"></script>
+    <script src="./js/main.js?02231600"></script>
     <title>吟遊諸羅 Reading ChiaYi - 嘉義縣博物館與地方文化館</title>
 
     <link rel="stylesheet" href="./css/reset.css">
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="contentDisplay">
-                    <iframe src="http://www.incense-art.com.tw/about.asp"></iframe>
+                    <iframe src="http://www.incense-art.com.tw/about.asp" name="goPage"></iframe>
                 </div>
                 <div>
 
