try to fix iframe problem
try to fix iframe problem

--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
             </div>
             <div class="mainContent">
                 <div class="contentHeader">
-                    <h2>香藝緣起</h2>
+                    <h2></h2>
                     <div class="functionBox">
                         <a class="website" target="_blank"></a>
                         <a target="_blank">[新分頁開啟]</a>
                     </div>
                 </div>
                 <div class="contentDisplay">
-                    <iframe src="http://www.incense-art.com.tw/about.asp" name="goPage"></iframe>
+                    <iframe></iframe>
                 </div>
                 <div>
 
