--- a/index.html
+++ b/index.html
@@ -131,9 +131,8 @@
     <nav class="navBar">
         <a class="navLogo" href="#frontIndex"></a>
         <div class="navSub"></div>
-        <input type="checkbox" id="toggle-1" class="navToogle">
+        <input type="checkbox" id="toggle-1" class="navToogle" />
         <label for="toggle-1" class="navCenter"> </label>
-
         <div class="listBox">
             <a id="adjNav"></a>
         </div>
@@ -146,20 +145,17 @@
                     <div class="subListLeft"></div>
                     <div class="subListRight"></div>
                 </div>
-
-
-
             </div>
             <div class="mainContent">
                 <div class="contentHeader">
                     <h2></h2>
                     <div class="functionBox">
-                        <a class="website" target="_blank"></a>
+                        <a class="website" target="_blank"></a><br>
                         <a target="_blank">[新分頁開啟]</a>
                     </div>
                 </div>
                 <div class="contentDisplay">
-                    <iframe></iframe>
+                    <iframe src=""></iframe>
                 </div>
                 <div>
 
@@ -174,7 +170,6 @@
         <a id="moc"></a><a id="cyc"></a><br />
         <h5> 主辦單位／</h5><a id="tbocc"></a><br />
         <h5>執行單位／</h5><a id="tnnua"></a> </footer>
-
 </body>
 
 </html>
