--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
             <div id="selectMenu">
 
                 <div id="select1" class="infoBox">
-
+                    <div class="loadingPin">
+                        <img alt="請點選上方地圖選擇要看的館舍" src="img/loading.svg">
+                        <p>請於地圖中<br>選擇欲走讀的館舍</p>
+                    </div>
 
                 </div>
                 <div id="select2" class="infoBox">
